BAC-528 Add handler for validate login field.
1. Add parameter Routes.ValidateLoginField and him default value.
2. Edit AuthType with new field CheckLoginFieldRequest and add default struct for him.
3. Add routes for ValidateLoginField handler.
4. Add ValidateLoginField handler.
5. Edit example.
6. Edit swagger doc.
