# config/config.go
@@ -10,6 +10,9 @@ type Config struct {
 		// SignUp is gin route path for sign-up handler. Default: "sign-up"
 		SignUp string
 
+		// ValidateLoginField is gin route path for check login field handler. Default: "register/validate-login-field"
+		ValidateLoginField string
+
 		// SignIn is gin route path for sign-in handler. Default: "sign-in"
 		SignIn string
 
@@ -53,6 +56,7 @@ func (c *Config) Default() {
 	c.ContextNames.User = "user"
 
 	c.Routes.SignUp = "register"
+	c.Routes.ValidateLoginField = "register/validate-login-field"
 	c.Routes.SignIn = "login"
 	c.Routes.SignOut = "logout"
 
